# cleanArchitectureBaseExample

./: .env.development.example  .env.production.example  .env.test.example  .envrc  .envrc.development.example  .envrc.production.example  .envrc.test.example  .pre-commit-config.yaml  .python-version  README.md  alembic.ini  debugger.py  manage.py  pyproject.toml  wsgi.py
application/: app.py  config.py
application/rest/: constants.py  room.py
application_api/: app.py
application_api/rest/: constants.py  room.py
application_cli/: cli.py
config/: config.py
docker/: development.yml  production.yml  testing.yml
docker/web/: Dockerfile.development  Dockerfile.production
interfaces/: error_messages.py  repo.py
migrations/: env.py
migrations/versions/: d398ecc4b176_initial.py
rentomatic/: responses.py
rentomatic/application/: app.py  config.py
rentomatic/domain/: room.py
rentomatic/repository/: constants.py  memrepo.py
rentomatic/repository/mongo/: mongorepo.py
rentomatic/repository/postgres/: postgres_objects.py  postgresrepo.py
rentomatic/requests/: constants.py  error_messages.py  room_list.py
rentomatic/serializers/: room.py
rentomatic/use_cases/: room_list.py
tests/: conftest.py  test_responses.py
tests/api_rest/: test_room.py
tests/application_api/: conftest.py  test_room.py
tests/domain/: test_room.py
tests/repository/: conftest.py  test_memrepo.py
tests/repository/memrepo/: test_memrepo.py
tests/repository/mongo/: conftest.py  test_mongorepo.py
tests/repository/postgres/: conftest.py  test_postgresrepo.py
tests/requests/: conftest.py  test_room_list.py
tests/rest/: conftest.py  test_room.py
tests/serializers/: test_room.py
tests/use_cases/: conftest.py  test_room_list.py
tests/utils/: faker_data.py  utils.py
