[tool.poetry]
name = "cleanarchitecturebaseexample"
version = "0.1.0"
description = "Base for implement clean architecture in python"
authors = ["Cristian Galvis <cjgalvisc@unal.edu.co>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pytest = "^7.0.1"
black = "^22.1.0"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"
flakehell = "^0.9.0"
Faker = "^13.0.0"

[tool.isort]
use_parentheses = true
reverse_relative = true
include_trailing_comma = true
lines_between_types = 0
multi_line_output = 3
line_length = 79

[tool.black]
target-version = ['py39']
include = '\.pyi?$'
line-length = 79

[tool.flakehell]
max_line_length = 79
max-complexity = 18
show_source = true

[tool.flakehell.plugins]
# include everything in pyflakes except F401
pyflakes = ["+*", "-F401"]

[tool.coverage.run]
include=['./app/*']

[tool.coverage.report]
show_missing=true
include=['./app/*']
sort='-Miss'
precision=2

[tool.coverage.html]
title="MongoRolesFastAPI Coverage Report"
directory="coverage"
show_contexts=true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
